# Projeto_OS_IT

./: .env.example  .gitignore  .vercelignore  README.md  app.py  doctor.ps1  main.py  pyproject.toml  requirements.txt  schema.sql  server.py  start.ps1  uninstall.ps1  vercel.json
.claude/: settings.local.json
scripts/: common.ps1  doctor.ps1  firebird-install.ps1  firebird-uninstall.ps1  start.ps1  uninstall.ps1
static/: app.js  index.html
templates/: _order_list_content.html  base.html  list_os.html  new_os.html  os_detail.html
