[project]
name = "inovatech-os"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121.0",
  "uvicorn>=0.34.0",
  "sqlalchemy>=2.0.0",
  "qrcode[pil]>=7.0",
  "python-dotenv>=1.0.0",
  "psycopg2-binary~=2.9.3",
  "python-multipart>=0.0.9",
  "jinja2>=3.0.0",
  "itsdangerous>=2.0.0",
]
